New project for unary uncoding and decoding.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Kompresja danych/Entropia/obj/
 Kompresja danych/Entropia/bin/
 sonarqube_cmd.txt
 .sonarqube/
+Kompresja danych/UnaryCoding/obj/
+Kompresja danych/UnaryCoding/bin/
