Shannon-Fano code coder.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Kompresja danych/HuffmanCoding/obj/
 Kompresja danych/HuffmanCoding/bin/
 Kompresja danych/packages/
 Kompresja danych/bw-output/
+Kompresja danych/ShannonFanoCoding/obj/
+Kompresja danych/ShannonFanoCoding/bin/
