Arithmetic code encoder.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Kompresja danych/packages/
 Kompresja danych/bw-output/
 Kompresja danych/ShannonFanoCoding/obj/
 Kompresja danych/ShannonFanoCoding/bin/
+Kompresja danych/ArithmeticCoding/bin/
+Kompresja danych/ArithmeticCoding/obj/
