--- a/Kompresja danych/ArithmeticCoding/ArithmeticCoding.csproj
+++ b/Kompresja danych/ArithmeticCoding/ArithmeticCoding.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArithmeticCodeBorders.cs" />
+    <Compile Include="ArithmeticCodeInterval.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
