RLE encoding GUI stub with PPM image loading.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Kompresja danych/ShannonFanoCoding/obj/
 Kompresja danych/ShannonFanoCoding/bin/
 Kompresja danych/ArithmeticCoding/bin/
 Kompresja danych/ArithmeticCoding/obj/
+Kompresja danych/RLECoding/bin/
+Kompresja danych/RLECoding/obj/
